--- a/package.json
+++ b/package.json
@@ -2,5 +2,14 @@
   "dependencies": {
     "express": "^4.14.0",
     "express-formidable": "^1.0.0"
+  },
+  "devDependencies": {
+    "babel-loader": "^6.2.10",
+    "babel-preset-es2017": "^6.22.0",
+    "react": "^15.4.2",
+    "react-hot-loader": "^1.3.1",
+    "react-router": "^3.0.2",
+    "webpack": "^1.14.0",
+    "webpack-dev-server": "^1.16.2"
   }
 }
