--- a/package.json
+++ b/package.json
@@ -1,14 +1,29 @@
 {
+  "scripts": {
+    "build": "webpack --progress -p",
+    "clean-pub": "rm -r ./public",
+    "docs": "esdoc -c ./js/esdoc.json",
+    "start": "webpack-dev-server --config webpack.dev.config.js --port 2992 --content-base public --hot --progress --inline"
+  },
   "dependencies": {
     "express": "^4.14.0",
     "express-formidable": "^1.0.0"
   },
   "devDependencies": {
     "babel-loader": "^6.2.10",
+    "babel-plugin-transform-class-properties": "^6.22.0",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-es2015-native-modules": "^6.9.4",
     "babel-preset-es2017": "^6.22.0",
+    "babel-preset-react": "^6.22.0",
+    "css-loader": "^0.26.1",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "image-webpack-loader": "^3.1.0",
     "react": "^15.4.2",
+    "react-dom": "^15.4.2",
     "react-hot-loader": "^1.3.1",
     "react-router": "^3.0.2",
+    "sass-loader": "^4.1.1",
     "webpack": "^1.14.0",
     "webpack-dev-server": "^1.16.2"
   }
