--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-preset-es2017": "^6.22.0",
     "babel-preset-react": "^6.22.0",
     "css-loader": "^0.26.1",
+    "dropzone": "^4.3.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "image-webpack-loader": "^3.1.0",
     "react": "^15.4.2",
