--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "scripts": {
-    "build": "webpack --progress -p",
+    "build": "webpack --progress -p --config webpack.prod.config.js",
     "clean-pub": "rm -r ./public",
     "docs": "esdoc -c ./js/esdoc.json",
-    "start": "webpack-dev-server --config webpack.dev.config.js --port 2992 --content-base public --hot --progress --inline"
+    "start-dev": "node server.js"
   },
   "dependencies": {
     "express": "^4.14.0",
@@ -19,6 +19,7 @@
     "css-loader": "^0.26.1",
     "dropzone": "^4.3.0",
     "extract-text-webpack-plugin": "^1.0.1",
+    "html-webpack-plugin": "^2.28.0",
     "image-webpack-loader": "^3.1.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
@@ -26,6 +27,8 @@
     "react-router": "^3.0.2",
     "sass-loader": "^4.1.1",
     "webpack": "^1.14.0",
-    "webpack-dev-server": "^1.16.2"
+    "webpack-dev-middleware": "^1.9.0",
+    "webpack-dev-server": "^1.16.2",
+    "webpack-hot-middleware": "^2.16.1"
   }
 }
