--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
     "build": "webpack --progress -p --config webpack.prod.config.js",
     "clean-pub": "rm -r ./public",
     "docs": "esdoc -c ./js/esdoc.json",
-    "start-dev": "node server.js"
+    "start-dev": "node server.js",
+    "start-prod": "NODE_ENV=production node server.js"
   },
   "dependencies": {
     "express": "^4.14.0",
     "express-formidable": "^1.0.0"
   },
   "devDependencies": {
+    "babel-core": "^6.22.1",
     "babel-loader": "^6.2.10",
     "babel-plugin-transform-class-properties": "^6.22.0",
     "babel-preset-es2015": "^6.22.0",
@@ -23,6 +25,7 @@
     "image-webpack-loader": "^3.1.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-dropzone": "^3.9.2",
     "react-hot-loader": "^1.3.1",
     "react-router": "^3.0.2",
     "sass-loader": "^4.1.1",
